fixed why page text from overflowing on smaller screen sizes

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -501,19 +501,26 @@ body {
 	div.section-content {
 	 	max-width:71.25rem;
 	 	margin:auto;
+	 	@media screen and (max-width:61.9375rem) {
+	 		display:inline;
+	 		max-width:98vw;
+	 	}
 	}
 	section.col-12.col-sm-6.section-content {
-		@media screen and (max-width:35.9375rem) {
+		@media screen and (max-width:61.9375rem) {
 			width:100%;
-			max-width:100vw;
+			max-width:98vw;
 		}
-		@media screen and (min-width:36rem) {
+		@media screen and (min-width:62rem) {
 			width:50%;
-			max-width:50vw;
+			max-width:48vw;
 		}
 	}
 	div.section-content.testimonial {
 		max-width: 53rem;
+		@media screen and (max-width:61.9375rem) {
+	 		max-width:98vw;
+	 	}
 	}
 }
 
